--- a/css/about.css
+++ b/css/about.css
@@ -1,16 +1,14 @@
-/* Main Styling */
-
-	
 .about-container {
-	 width: 500px;
+	 margin: 0 auto;
+	 width: 800px;
 	 height: 100vh;
 	 display: block;
 	 position: relative;
-  	 margin: 0 auto;
 	 overflow-x:hidden;
 	 align-items: center;
 }
  .about-container .terminal .terminal-header {
+ 	margin-top: 100px;
 	 height: 28px;
 	 background-color: #e4e3e5;
 	 border-radius: 10px 10px 0 0;
@@ -19,6 +17,7 @@
 	 align-items: center;
 }
  .about-container .terminal .terminal-header .header-button {
+
 	 width: 12px;
 	 height: 12px;
 	 border-radius: 50%;
@@ -40,9 +39,10 @@
 	 background-color: #7575a3;
 	 border-radius: 0 0 4px 4px;
 	 box-shadow: 0 50px 100px rgba(50, 50, 93, 0.15), 0 15px 35px rgba(50, 50, 93, 0.2), 0 5px 15px rgba(0, 0, 0, 0.12);
+	 font-family: 'Lucida Console', monospace;
 }
  .about-container .terminal .terminal-window a {
-	 color: #0a94c2;
+	 color: #35feff;
 }
  .about-container .terminal .terminal-window .statement:first-child {
 	 padding-top: 35px;
@@ -55,8 +55,6 @@
 	 margin-left: 35px;
 	 margin-right: 35px;
 	 line-height: 24px;
-	 font-family: 'Inconsolata', monospace;
-
 }
  .about-container .terminal .terminal-window .statement .input-statement {
 	 color: #f7f7f7;
