--- a/css/home_landing.css
+++ b/css/home_landing.css
@@ -4,7 +4,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	background: linear-gradient(#c6d9ec, #FFF);
+	background: linear-gradient(#e6e6ff, #FFF);
 	overflow-x:hidden;
 }
 
