--- a/css/home_content.css
+++ b/css/home_content.css
@@ -21,7 +21,7 @@
 }
 
 .container-fluid.contact {
-	background: linear-gradient(#fff, #e6e6ff);
+	background: linear-gradient(#fff, #bee0f7);
 }
 
 
